small fixes to have the man pages intall automatically

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -1,8 +1,8 @@
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS = src testsuite
+SUBDIRS = src testsuite doc
 
-EXTRA_DIST = auxdir etc doc
+EXTRA_DIST = auxdir etc 
 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
 	               config.h.in config.sub configure install-sh \
