--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -421,7 +421,7 @@ AC_DEFINE(WITH_LSD_NOMEM_ERROR_FUNC, 1, [Have definition of lsd_nomem_error()])
 dnl All slurm Makefiles:
 
 AC_CONFIG_FILES([Makefile 
-                 src/Makefile 
+		 src/Makefile 
 		 src/api/Makefile 
 		 src/common/Makefile 
 		 src/popt/Makefile 
@@ -439,7 +439,9 @@ AC_CONFIG_FILES([Makefile
 		 testsuite/slurm_unit/slurmd/Makefile
 		 testsuite/slurm_unit/api/Makefile
 		 testsuite/slurm_unit/api/manual/Makefile
-		]
+		 doc/Makefile
+		 doc/man/Makefile
+		 ]
 )
 
 AC_OUTPUT
