o slurmd will terminate currently running slurmd on invocation  o Try harder to clean up shm semaphore in slurmd  o call daemon(1,0) instead of daemon(0,0) in slurmctld to preserve chdir()

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -2,9 +2,15 @@ AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = src testsuite doc
 
-EXTRA_DIST = auxdir etc 
+EXTRA_DIST = 	\
+	auxdir 	\
+	etc 	\
+	doc 	\
+	autogen.sh
 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
 	               config.h.in config.sub configure install-sh \
 	               ltconfig ltmain.sh missing mkinstalldirs \
 		       stamp-h.in
+
+include $(top_srcdir)/Make-rpm.mk
