o more Makefile.am updates:    - fix some EXTRA_DIST declarations so that CVS/ directories don't get      inlcuded in a make dist    - add forced target to rebuild any dependent convenience or api libs      (if necessary)

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -9,10 +9,11 @@ EXTRA_DIST =             		\
 	autogen.sh      		\
         Make-rpm.mk
 
-MAINTAINERCLEANFILES = aclocal.m4 config.guess \
-	               config.h.in config.sub configure install-sh \
-	               ltconfig ltmain.sh missing mkinstalldirs \
-		       stamp-h.in
+MAINTAINERCLEANFILES = 			\
+	aclocal.m4 config.guess 	\
+	config.h.in config.sub configure install-sh \
+	ltconfig ltmain.sh missing mkinstalldirs \
+	stamp-h.in
 
 include $(top_srcdir)/Make-rpm.mk
 
@@ -20,5 +21,3 @@ maintainer-clean-local:
 	-(cd $(top_srcdir) && rm -rf autom4te.cache)
 	-find . -name "Makefile.in" -exec rm {} \;
 	-find $(PACKAGE)-* -exec chmod u+w {} \;
-         
-        
