--- a/trunk/src/scancel/Makefile.am
+++ b/trunk/src/scancel/Makefile.am
@@ -1,3 +1,4 @@
+# $Id$
 # Makefile for scancel
 
 AUTOMAKE_OPTIONS = foreign
@@ -6,7 +7,7 @@ INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/api $(POPT_INCLUDES)
 
 bin_PROGRAMS = scancel
 
-LDADD = 					\
+scancel_LDADD = 					\
 	$(top_builddir)/src/common/libcommon.la	\
 	$(top_builddir)/src/api/libslurm.la	\
 	$(POPT_LIBS) 
@@ -14,3 +15,6 @@ LDADD = 					\
 noinst_HEADERS  = scancel.h
 scancel_SOURCES = scancel.c opt.c
 
+force:
+$(scancel_LDADD) : force
+	@cd `dirname $@` && $(MAKE) `basename $@`
