--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -1,5 +1,12 @@
-
-EXTRA_DIST = txt html pubdesign 
+# $Id$
 
 SUBDIRS = man
 
+EXTRA_DIST =		\
+	html/LCM.arch.png \
+	html/LCM.communicate.png \
+	html/SLURM.components.gif \
+	html/admin.guide.html \
+	html/user.guide.html
+	html/programmer.guide.html \
+	html/slurm.png \
