--- a/trunk/src/scontrol/Makefile.am
+++ b/trunk/src/scontrol/Makefile.am
@@ -7,9 +7,10 @@ INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/api
 
 bin_PROGRAMS = scontrol
 
-LDADD = 					\
-	$(top_builddir)/src/common/libcommon.la \
-	$(top_builddir)/src/api/libslurm.la     \
+LDADD = 					  \
+	$(top_builddir)/src/common/libcommon.la   \
+	$(top_builddir)/src/common/libhostlist.la \
+	$(top_builddir)/src/api/libslurm.la       \
 	$(READLINE_LIBS)
 
 
