--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -18,8 +18,9 @@ srun_SOURCES = srun.c opt.c env.c opt.h env.h job.c job.h net.c net.h \
                reattach.c reattach.h fname.h fname.c srun.wrapper.c   \
                signals.c signals.h allocate.c allocate.h
 
-srun_LDADD = $(top_builddir)/src/common/libcommon.la \
-	     $(top_builddir)/src/api/libslurm.la \
+srun_LDADD = $(top_builddir)/src/common/libcommon.la   \
+             $(top_builddir)/src/common/libhostlist.la \
+	     $(top_builddir)/src/api/libslurm.la       \
 	     $(POPT_LIBS) 
 
 force:
