--- a/trunk/src/squeue/Makefile.am
+++ b/trunk/src/squeue/Makefile.am
@@ -8,8 +8,9 @@ INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/api
 
 bin_PROGRAMS = squeue
 
-LDADD = $(top_builddir)/src/common/libcommon.la \
-	$(top_builddir)/src/api/libslurm.la     \
+LDADD = $(top_builddir)/src/common/libcommon.la 	\
+	$(top_builddir)/src/common/libhostlist.la	\
+	$(top_builddir)/src/api/libslurm.la     	\
 	$(POPT_LIBS)
 
 noinst_HEADERS = squeue.h print.h
