Relocated src/api/slurm.h into src/slurm/slurm.h for installation convenience.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -461,6 +461,7 @@ AC_CONFIG_FILES([Makefile
 		 src/slurmctld/Makefile 
 		 src/scontrol/Makefile
 		 src/scancel/Makefile
+		 src/slurm/Makefile
 		 src/squeue/Makefile
 		 src/sinfo/Makefile
 		 doc/Makefile
