slurm.h and slurm_errno.h placed in new directory slurm/ All references to header files changed to new pathname.

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS    = src testsuite doc
+SUBDIRS    = slurm src testsuite doc
 
 EXTRA_DIST =             		\
 	etc/slurm.conf.localhost 	\
