--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -452,6 +452,7 @@ AC_DEFINE(WITH_LSD_NOMEM_ERROR_FUNC, 1, [Have definition of lsd_nomem_error()])
 dnl All slurm Makefiles:
 
 AC_CONFIG_FILES([Makefile 
+		 slurm/Makefile
 		 src/Makefile 
 		 src/api/Makefile 
 		 src/common/Makefile 
@@ -461,7 +462,6 @@ AC_CONFIG_FILES([Makefile
 		 src/slurmctld/Makefile 
 		 src/scontrol/Makefile
 		 src/scancel/Makefile
-		 src/slurm/Makefile
 		 src/squeue/Makefile
 		 src/sinfo/Makefile
 		 doc/Makefile
