--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -1,9 +1,9 @@
 # $Id$
 
 if USE_INCLUDED_POPT
-SUBDIRS = popt common api slurmctld slurmd srun scontrol scancel slurm squeue sinfo
+SUBDIRS = popt common api slurmctld slurmd srun scontrol scancel squeue sinfo
 else
-SUBDIRS = common api slurmctld slurmd srun scontrol scancel slurm squeue sinfo
+SUBDIRS = common api slurmctld slurmd srun scontrol scancel squeue sinfo
 endif
 
 # make sure popt gets distributed:
