Fix which includes get installed.

--- a/trunk/slurm/Makefile.am
+++ b/trunk/slurm/Makefile.am
@@ -4,7 +4,9 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-EXTRA_DIST = slurm.h slurm_errno.h
+include_HEADERS =		\
+	slurm.h 		\
+	slurm_errno.h
 
-MAINTAINERCLEANFILES = 			\
+MAINTAINERCLEANFILES = 		\
 	slurm.h.in
