Link and test manual api tests against public libraries and headers.

--- a/trunk/testsuite/slurm_unit/api/manual/Makefile.am
+++ b/trunk/testsuite/slurm_unit/api/manual/Makefile.am
@@ -12,6 +12,4 @@ noinst_PROGRAMS = cancel-tst \
 		
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common 
-LDADD    = $(top_builddir)/src/common/libcommon.la \
-	   $(top_builddir)/src/common/libhostlist.la \
-	   $(top_builddir)/src/api/libslurm.la
+LDADD    = $(top_builddir)/src/api/libslurm.la
