added slurm.spec generation

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -474,6 +474,7 @@ AC_CONFIG_FILES([Makefile
 		 testsuite/slurm_unit/slurmd/Makefile
 		 testsuite/slurm_unit/api/Makefile
 		 testsuite/slurm_unit/api/manual/Makefile
+		 slurm.spec
 		 ]
 )
 
