--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -6,45 +6,27 @@ Copyright: Copyright (C) 2002 The Regents of the University of California.  Prod
 License: GPL
 Group: System Environment/Base
 Source: %{name}-%{version}-%{release}.tgz
+Requires: authd libreadline libpopt
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}
 
 %define _with_authd 0
 %define _with_elan 0
 %define _with_totalview 0
 
-%package 
-Summary: Common files and client utils for SLURM
-Group: System Environment/Base
-Requires: authd libreadline libpopt
-Prereq: 
 
 %package devel
 Summary: Devel package for SLURM.
 Group: System Environment/Base
 Requires: slurm
 
-%package daemon
-Summary: The compute node daemon of SLURM.
-Group: System Environment/Base
-Requires: slurm
-
-%package controller
-Summary: The central management daemon of SLURM.
-Group: System Environment/Base
-Requires: slurm 
-
 
 %description 
-The common slurm package, which includes the base libraries and the client utilitues for SLURM.
+The common slurm package, which includes the base libraries, client utilitues for SLURM, slurmd, and slurmctld.
+Slurmd  is the compute node daemon of Slurm. It monitors all tasks running on the compute node , accepts work (tasks), launches tasks, and kills running tasks upon request.
+Slurmctld  is  the central management daemon of Slurm. It monitors all other Slurm daemons and resources, accepts work (jobs), and allocates resources to those jobs.
 
 %description devel
 Development package for SLURM.  This package includes the header files and static libraries.
-
-%description daemon
-Slurmd  is the compute node daemon of Slurm. It monitors all tasks running on the compute node , accepts work (tasks), launches tasks, and kills running tasks upon request.
-
-%description slurmctld
-Slurmctld  is  the central management daemon of Slurm. It monitors all other Slurm daemons and resources, accepts work (jobs), and allocates resources to those jobs.
 
 
 %prep
