Added the etc/init.d.slurm file to EXTRA_DIST

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -6,6 +6,7 @@ SUBDIRS    = slurm src testsuite doc
 
 EXTRA_DIST =             		\
 	etc/slurm.conf.localhost 	\
+	etc/init.d.slurm \
 	autogen.sh      		\
         Make-rpm.mk slurm.spec		\
 	META
