using ./configure instead of %configure because of some wierdness between rpm and automake.

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -10,7 +10,10 @@ EXTRA_DIST =	\
 	autogen.sh	\
 	Make-rpm.mk	\
 	slurm.spec	\
-	META
+	README	\
+	DISCLAIMER	\
+	COPYING	\
+ 	META
 
 MAINTAINERCLEANFILES = 			\
 	aclocal.m4 config.guess 	\
